fixed dark mode button

--- a/Source/static/signup.css
+++ b/Source/static/signup.css
@@ -31,12 +31,17 @@
     border-radius: 63px;
 }
 
+button,
 .btn{
 	margin-top: 2em;
-	background: var(--title);
+	background: var(--button1);
 	width: 332px;
 	height: 80px;
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.btn:hover{
+	background: var(--button1-hover);
 }
 
 .form-control {
